# admin/api/admin/v1/auth_http.pb.go
@@ -1,0 +1,199 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.8.0
+// - protoc             v6.31.1
+// source: admin/v1/auth.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationAuthGetPermissions = "/admin.v1.Auth/GetPermissions"
+const OperationAuthGetPublicContent = "/admin.v1.Auth/GetPublicContent"
+const OperationAuthLogin = "/admin.v1.Auth/Login"
+const OperationAuthLogout = "/admin.v1.Auth/Logout"
+
+type AuthHTTPServer interface {
+	// GetPermissions 获取用户权限
+	GetPermissions(context.Context, *PermissionsReq) (*PermissionsReply, error)
+	// GetPublicContent 获取公共内容
+	GetPublicContent(context.Context, *PublicContentReq) (*PublicContentReply, error)
+	// Login 登陆
+	Login(context.Context, *LoginReq) (*User, error)
+	// Logout 登出
+	Logout(context.Context, *LogoutReq) (*LogoutReply, error)
+}
+
+func RegisterAuthHTTPServer(s *http.Server, srv AuthHTTPServer) {
+	r := s.Route("/")
+	r.POST("/api/v1/login", _Auth_Login0_HTTP_Handler(srv))
+	r.POST("/api/v1/logout", _Auth_Logout0_HTTP_Handler(srv))
+	r.POST("/api/v1/content", _Auth_GetPublicContent0_HTTP_Handler(srv))
+	r.POST("/api/v1/permissions", _Auth_GetPermissions0_HTTP_Handler(srv))
+}
+
+func _Auth_Login0_HTTP_Handler(srv AuthHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in LoginReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAuthLogin)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Login(ctx, req.(*LoginReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*User)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Auth_Logout0_HTTP_Handler(srv AuthHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in LogoutReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAuthLogout)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.Logout(ctx, req.(*LogoutReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*LogoutReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Auth_GetPublicContent0_HTTP_Handler(srv AuthHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in PublicContentReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAuthGetPublicContent)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetPublicContent(ctx, req.(*PublicContentReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*PublicContentReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Auth_GetPermissions0_HTTP_Handler(srv AuthHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in PermissionsReq
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationAuthGetPermissions)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetPermissions(ctx, req.(*PermissionsReq))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*PermissionsReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+type AuthHTTPClient interface {
+	GetPermissions(ctx context.Context, req *PermissionsReq, opts ...http.CallOption) (rsp *PermissionsReply, err error)
+	GetPublicContent(ctx context.Context, req *PublicContentReq, opts ...http.CallOption) (rsp *PublicContentReply, err error)
+	Login(ctx context.Context, req *LoginReq, opts ...http.CallOption) (rsp *User, err error)
+	Logout(ctx context.Context, req *LogoutReq, opts ...http.CallOption) (rsp *LogoutReply, err error)
+}
+
+type AuthHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewAuthHTTPClient(client *http.Client) AuthHTTPClient {
+	return &AuthHTTPClientImpl{client}
+}
+
+func (c *AuthHTTPClientImpl) GetPermissions(ctx context.Context, in *PermissionsReq, opts ...http.CallOption) (*PermissionsReply, error) {
+	var out PermissionsReply
+	pattern := "/api/v1/permissions"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAuthGetPermissions))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AuthHTTPClientImpl) GetPublicContent(ctx context.Context, in *PublicContentReq, opts ...http.CallOption) (*PublicContentReply, error) {
+	var out PublicContentReply
+	pattern := "/api/v1/content"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAuthGetPublicContent))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AuthHTTPClientImpl) Login(ctx context.Context, in *LoginReq, opts ...http.CallOption) (*User, error) {
+	var out User
+	pattern := "/api/v1/login"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAuthLogin))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *AuthHTTPClientImpl) Logout(ctx context.Context, in *LogoutReq, opts ...http.CallOption) (*LogoutReply, error) {
+	var out LogoutReply
+	pattern := "/api/v1/logout"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationAuthLogout))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
