# admin/openapi.yaml
@@ -3,37 +3,172 @@
 
 openapi: 3.0.3
 info:
-    title: Greeter API
+    title: Auth API
     description: The greeting service definition.
     version: 0.0.1
 paths:
-    /helloworld/{name}:
-        get:
+    /api/v1/content:
+        post:
             tags:
-                - Greeter
-                - subgroup
-            description: Sends a greeting
-            operationId: Greeter_SayHello
-            parameters:
-                - name: name
-                  in: path
-                  required: true
-                  schema:
-                    type: string
+                - Auth
+            description: 获取公共内容
+            operationId: Auth_GetPublicContent
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/admin.v1.PublicContentReq'
+                required: true
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/helloworld.v1.HelloReply'
+                                $ref: '#/components/schemas/admin.v1.PublicContentReply'
+    /api/v1/login:
+        post:
+            tags:
+                - Auth
+            description: 登陆
+            operationId: Auth_Login
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/admin.v1.LoginReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/admin.v1.User'
+    /api/v1/logout:
+        post:
+            tags:
+                - Auth
+            description: 登出
+            operationId: Auth_Logout
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/admin.v1.LogoutReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/admin.v1.LogoutReply'
+    /api/v1/permissions:
+        post:
+            tags:
+                - Auth
+            description: 获取用户权限
+            operationId: Auth_GetPermissions
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/admin.v1.PermissionsReq'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/admin.v1.PermissionsReply'
 components:
     schemas:
-        helloworld.v1.HelloReply:
+        admin.v1.LoginReq:
             type: object
             properties:
-                message:
+                user_name:
                     type: string
-            description: The response message containing the greetings
+                password:
+                    type: string
+            description: 请求 - 登录
+        admin.v1.LogoutReply:
+            type: object
+            properties:
+                id:
+                    type: string
+            description: 回应 - 登出
+        admin.v1.LogoutReq:
+            type: object
+            properties:
+                head:
+                    $ref: '#/components/schemas/common.BaseHead'
+            description: 请求 - 登出
+        admin.v1.PermissionsReply:
+            type: object
+            properties:
+                permissions:
+                    type: array
+                    items:
+                        type: string
+        admin.v1.PermissionsReq:
+            type: object
+            properties:
+                head:
+                    $ref: '#/components/schemas/common.BaseHead'
+        admin.v1.PublicContentReply:
+            type: object
+            properties:
+                content:
+                    type: string
+        admin.v1.PublicContentReq:
+            type: object
+            properties:
+                head:
+                    $ref: '#/components/schemas/common.BaseHead'
+        admin.v1.User:
+            type: object
+            properties:
+                id:
+                    type: string
+                user_name:
+                    type: string
+                password:
+                    type: string
+                nick_name:
+                    type: string
+                email:
+                    type: string
+                roles:
+                    type: array
+                    items:
+                        type: string
+                token:
+                    type: string
+        common.BaseHead:
+            type: object
+            properties:
+                userid:
+                    type: string
+                appid:
+                    type: integer
+                    format: int32
+                channel:
+                    type: integer
+                    format: int32
+                version:
+                    type: string
+                region:
+                    type: string
+                ext:
+                    type: string
+                userType:
+                    type: integer
+                    format: enum
+                gender:
+                    type: integer
+                    format: enum
+            description: 通用请求头
 tags:
-    - name: Greeter
+    - name: Auth
